--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Sebastian Gomez Letelier",
+  "author": "Sebastian Gomez Letelier & Sebastian Valenzuela",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
